package ca.mcmaster.se2aa4.mazerunner;

public enum Direction {
    NORTH,
    SOUTH,
    EAST,
    WEST;
}